// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#466 mapChangeBug 1`] = `
[
  {
    "op": "remove",
    "path": [
      "map",
      "d",
      "a",
    ],
  },
  {
    "op": "remove",
    "path": [
      "map",
      "c",
      "a",
    ],
  },
  {
    "op": "remove",
    "path": [
      "map",
      "b",
      "a",
    ],
  },
]
`;

exports[`#466 mapChangeBug 2`] = `
[
  {
    "op": "add",
    "path": [
      "map",
      "d",
      "a",
    ],
    "value": true,
  },
  {
    "op": "add",
    "path": [
      "map",
      "c",
      "a",
    ],
    "value": true,
  },
  {
    "op": "add",
    "path": [
      "map",
      "b",
      "a",
    ],
    "value": true,
  },
]
`;

exports[`#468 1`] = `
[
  {
    "op": "replace",
    "path": [
      0,
      "id",
    ],
    "value": 2,
  },
  {
    "op": "add",
    "path": [
      0,
    ],
    "value": {
      "id": 2,
    },
  },
]
`;

exports[`#468 2`] = `
[
  {
    "op": "replace",
    "path": [
      0,
      "id",
    ],
    "value": 1,
  },
  {
    "op": "remove",
    "path": [
      0,
    ],
  },
]
`;

exports[`#648 assigning object to itself should not change patches 1`] = `
[
  {
    "op": "replace",
    "path": [
      "obj",
      "value",
    ],
    "value": 1,
  },
]
`;

exports[`#648 assigning object to itself should not change patches 2`] = `
[
  {
    "op": "replace",
    "path": [
      "obj",
      "value",
    ],
    "value": 200,
  },
]
`;

exports[`#876 Ensure empty patch set for atomic set+delete on Map 1`] = `
[
  {
    "op": "remove",
    "path": [
      "foo",
    ],
  },
]
`;

exports[`#876 Ensure empty patch set for atomic set+delete on Map 2`] = `
[
  {
    "op": "add",
    "path": [
      "foo",
    ],
    "value": "baz",
  },
]
`;

exports[`#876 Ensure empty patch set for atomic set+delete on Map 3`] = `[]`;

exports[`#876 Ensure empty patch set for atomic set+delete on Map 4`] = `[]`;

exports[`#879 delete item from array - 2 1`] = `
[
  {
    "op": "replace",
    "path": [
      2,
    ],
    "value": undefined,
  },
]
`;

exports[`#879 delete item from array - 2 2`] = `
[
  {
    "op": "replace",
    "path": [
      2,
    ],
    "value": 3,
  },
]
`;

exports[`#879 delete item from array 1`] = `
[
  {
    "op": "replace",
    "path": [
      1,
    ],
    "value": undefined,
  },
]
`;

exports[`#879 delete item from array 2`] = `
[
  {
    "op": "replace",
    "path": [
      1,
    ],
    "value": 2,
  },
]
`;

exports[`array 1`] = `
[
  {
    "op": "add",
    "path": [
      0,
    ],
    "value": "new str",
  },
]
`;

exports[`array 2`] = `
[
  {
    "op": "remove",
    "path": [
      0,
    ],
  },
]
`;

exports[`array 3`] = `
[
  {
    "op": "replace",
    "path": [
      "arr10",
      1,
    ],
    "value": undefined,
  },
  {
    "op": "add",
    "path": [
      "arr9",
      3,
    ],
    "value": undefined,
  },
  {
    "op": "add",
    "path": [
      "arr9",
      4,
    ],
    "value": undefined,
  },
  {
    "op": "add",
    "path": [
      "arr9",
      5,
    ],
    "value": undefined,
  },
  {
    "op": "add",
    "path": [
      "arr9",
      6,
    ],
    "value": undefined,
  },
  {
    "op": "add",
    "path": [
      "arr9",
      7,
    ],
    "value": undefined,
  },
  {
    "op": "add",
    "path": [
      "arr9",
      8,
    ],
    "value": undefined,
  },
  {
    "op": "add",
    "path": [
      "arr9",
      9,
    ],
    "value": undefined,
  },
  {
    "op": "add",
    "path": [
      "arr9",
      10,
    ],
    "value": 10,
  },
  {
    "op": "remove",
    "path": [
      "arr8",
      0,
    ],
  },
  {
    "op": "remove",
    "path": [
      "arr8",
      0,
    ],
  },
  {
    "op": "remove",
    "path": [
      "arr8",
      0,
    ],
  },
  {
    "op": "remove",
    "path": [
      "arr7",
      0,
    ],
  },
  {
    "op": "add",
    "path": [
      "arr7",
      1,
    ],
    "value": 2,
  },
  {
    "op": "remove",
    "path": [
      "arr6",
      0,
    ],
  },
  {
    "op": "remove",
    "path": [
      "arr6",
      0,
    ],
  },
  {
    "op": "add",
    "path": [
      "arr6",
      1,
    ],
    "value": "b",
  },
  {
    "op": "add",
    "path": [
      "arr6",
      2,
    ],
    "value": "a",
  },
  {
    "op": "remove",
    "path": [
      "arr5",
      0,
    ],
  },
  {
    "op": "add",
    "path": [
      "arr4",
      0,
    ],
    "value": 0,
  },
  {
    "op": "remove",
    "path": [
      "arr3",
      2,
    ],
  },
  {
    "op": "add",
    "path": [
      "arr2",
      3,
    ],
    "value": "d",
  },
  {
    "op": "replace",
    "path": [
      "arr1",
      0,
      "a",
    ],
    "value": 0,
  },
  {
    "op": "add",
    "path": [
      "arr1",
      0,
    ],
    "value": {
      "a": 0,
    },
  },
  {
    "op": "replace",
    "path": [
      "arr1",
      1,
    ],
    "value": {
      "a": 2,
    },
  },
  {
    "op": "add",
    "path": [
      "arr",
      2,
    ],
    "value": 7,
  },
  {
    "op": "add",
    "path": [
      "arr",
      3,
    ],
    "value": 8,
  },
  {
    "op": "add",
    "path": [
      "arr",
      4,
    ],
    "value": 9,
  },
  {
    "op": "replace",
    "path": [
      "arr",
      5,
    ],
    "value": 4,
  },
]
`;

exports[`array 4`] = `
[
  {
    "op": "replace",
    "path": [
      "arr10",
      1,
    ],
    "value": 2,
  },
  {
    "op": "remove",
    "path": [
      "arr9",
      3,
    ],
  },
  {
    "op": "remove",
    "path": [
      "arr9",
      3,
    ],
  },
  {
    "op": "remove",
    "path": [
      "arr9",
      3,
    ],
  },
  {
    "op": "remove",
    "path": [
      "arr9",
      3,
    ],
  },
  {
    "op": "remove",
    "path": [
      "arr9",
      3,
    ],
  },
  {
    "op": "remove",
    "path": [
      "arr9",
      3,
    ],
  },
  {
    "op": "remove",
    "path": [
      "arr9",
      3,
    ],
  },
  {
    "op": "remove",
    "path": [
      "arr9",
      3,
    ],
  },
  {
    "op": "add",
    "path": [
      "arr8",
      0,
    ],
    "value": 1,
  },
  {
    "op": "add",
    "path": [
      "arr8",
      1,
    ],
    "value": 2,
  },
  {
    "op": "add",
    "path": [
      "arr8",
      2,
    ],
    "value": 3,
  },
  {
    "op": "add",
    "path": [
      "arr7",
      0,
    ],
    "value": 2,
  },
  {
    "op": "remove",
    "path": [
      "arr7",
      2,
    ],
  },
  {
    "op": "add",
    "path": [
      "arr6",
      0,
    ],
    "value": "a",
  },
  {
    "op": "add",
    "path": [
      "arr6",
      1,
    ],
    "value": "b",
  },
  {
    "op": "remove",
    "path": [
      "arr6",
      3,
    ],
  },
  {
    "op": "remove",
    "path": [
      "arr6",
      3,
    ],
  },
  {
    "op": "add",
    "path": [
      "arr5",
      0,
    ],
    "value": "a",
  },
  {
    "op": "remove",
    "path": [
      "arr4",
      0,
    ],
  },
  {
    "op": "add",
    "path": [
      "arr3",
      2,
    ],
    "value": "c",
  },
  {
    "op": "remove",
    "path": [
      "arr2",
      3,
    ],
  },
  {
    "op": "replace",
    "path": [
      "arr1",
      0,
      "a",
    ],
    "value": 1,
  },
  {
    "op": "remove",
    "path": [
      "arr1",
      0,
    ],
  },
  {
    "op": "replace",
    "path": [
      "arr1",
      0,
    ],
    "value": {
      "a": 1,
    },
  },
  {
    "op": "remove",
    "path": [
      "arr",
      2,
    ],
  },
  {
    "op": "remove",
    "path": [
      "arr",
      2,
    ],
  },
  {
    "op": "remove",
    "path": [
      "arr",
      2,
    ],
  },
  {
    "op": "replace",
    "path": [
      "arr",
      2,
    ],
    "value": 3,
  },
]
`;

exports[`array 5`] = `
[
  {
    "op": "remove",
    "path": [
      "arr4",
      0,
    ],
  },
  {
    "op": "remove",
    "path": [
      "arr4",
      0,
    ],
  },
  {
    "op": "remove",
    "path": [
      "arr3",
      1,
    ],
  },
  {
    "op": "remove",
    "path": [
      "arr1",
      0,
    ],
  },
  {
    "op": "remove",
    "path": [
      "arr2",
      1,
    ],
  },
  {
    "op": "add",
    "path": [
      "arr0",
      0,
    ],
    "value": {
      "bar": "str",
    },
  },
]
`;

exports[`array 6`] = `
[
  {
    "op": "add",
    "path": [
      "arr4",
      0,
    ],
    "value": {
      "bar": "str1",
    },
  },
  {
    "op": "add",
    "path": [
      "arr4",
      1,
    ],
    "value": {
      "bar": "str1",
    },
  },
  {
    "op": "add",
    "path": [
      "arr3",
      1,
    ],
    "value": {
      "bar": "str1",
    },
  },
  {
    "op": "add",
    "path": [
      "arr1",
      0,
    ],
    "value": {
      "bar": "str1",
    },
  },
  {
    "op": "add",
    "path": [
      "arr2",
      1,
    ],
    "value": {
      "bar": "str1",
    },
  },
  {
    "op": "remove",
    "path": [
      "arr0",
      0,
    ],
  },
]
`;

exports[`array length with ref 1`] = `
[
  {
    "op": "add",
    "path": [
      "f",
    ],
    "value": {
      "baz": "new str0",
    },
  },
  {
    "op": "remove",
    "path": [
      "foobar",
      0,
    ],
  },
]
`;

exports[`array length with ref 2`] = `
[
  {
    "op": "remove",
    "path": [
      "f",
    ],
  },
  {
    "op": "add",
    "path": [
      "foobar",
      0,
    ],
    "value": {
      "baz": "str",
    },
  },
]
`;

exports[`array pop with ref 1`] = `
[
  {
    "op": "add",
    "path": [
      "f",
    ],
    "value": {
      "baz": "new str0",
    },
  },
  {
    "op": "remove",
    "path": [
      "foobar",
      0,
    ],
  },
]
`;

exports[`array pop with ref 2`] = `
[
  {
    "op": "remove",
    "path": [
      "f",
    ],
  },
  {
    "op": "add",
    "path": [
      "foobar",
      0,
    ],
    "value": {
      "baz": "str",
    },
  },
]
`;

exports[`array setter with ref 1`] = `
[
  {
    "op": "replace",
    "path": [
      "foobar",
      0,
    ],
    "value": {
      "baz": "str",
    },
  },
  {
    "op": "add",
    "path": [
      "f",
    ],
    "value": {
      "baz": "new str0",
    },
  },
]
`;

exports[`array setter with ref 2`] = `
[
  {
    "op": "replace",
    "path": [
      "foobar",
      0,
    ],
    "value": {
      "baz": "str",
    },
  },
  {
    "op": "remove",
    "path": [
      "f",
    ],
  },
]
`;

exports[`array shift with ref 1`] = `
[
  {
    "op": "add",
    "path": [
      "f",
    ],
    "value": {
      "baz": "new str0",
    },
  },
  {
    "op": "remove",
    "path": [
      "foobar",
      0,
    ],
  },
]
`;

exports[`array shift with ref 2`] = `
[
  {
    "op": "remove",
    "path": [
      "f",
    ],
  },
  {
    "op": "add",
    "path": [
      "foobar",
      0,
    ],
    "value": {
      "baz": "str",
    },
  },
]
`;

exports[`array splice with ref 1`] = `
[
  {
    "op": "add",
    "path": [
      "f",
    ],
    "value": {
      "baz": "new str0",
    },
  },
  {
    "op": "remove",
    "path": [
      "foobar",
      0,
    ],
  },
]
`;

exports[`array splice with ref 2`] = `
[
  {
    "op": "remove",
    "path": [
      "f",
    ],
  },
  {
    "op": "add",
    "path": [
      "foobar",
      0,
    ],
    "value": {
      "baz": "str",
    },
  },
]
`;

exports[`array with ref 1`] = `
[
  {
    "op": "replace",
    "path": [
      "f",
      "baz",
    ],
    "value": "new str3",
  },
  {
    "op": "add",
    "path": [
      "foobar1",
    ],
    "value": {
      "baz": "new str2",
    },
  },
  {
    "op": "remove",
    "path": [
      "foobar",
      0,
    ],
  },
]
`;

exports[`array with ref 2`] = `
[
  {
    "op": "replace",
    "path": [
      "f",
      "baz",
    ],
    "value": "str",
  },
  {
    "op": "remove",
    "path": [
      "foobar1",
    ],
  },
  {
    "op": "add",
    "path": [
      "foobar",
      0,
    ],
    "value": {
      "baz": "str",
    },
  },
]
`;

exports[`array with ref 3`] = `
[
  {
    "op": "add",
    "path": [
      "foobar",
      0,
    ],
    "value": {},
  },
  {
    "op": "add",
    "path": [
      "foobar",
      1,
    ],
    "value": {
      "baz": "new str0",
    },
  },
  {
    "op": "remove",
    "path": [
      "f",
    ],
  },
]
`;

exports[`array with ref 4`] = `
[
  {
    "op": "remove",
    "path": [
      "foobar",
      0,
    ],
  },
  {
    "op": "remove",
    "path": [
      "foobar",
      0,
    ],
  },
  {
    "op": "add",
    "path": [
      "f",
    ],
    "value": {
      "baz": "str",
    },
  },
]
`;

exports[`arrays - NESTED splice should should result in remove op. 1`] = `
[
  {
    "op": "remove",
    "path": [
      "a",
      "b",
      "c",
      1,
    ],
  },
]
`;

exports[`arrays - NESTED splice should should result in remove op. 2`] = `
[
  {
    "op": "add",
    "path": [
      "a",
      "b",
      "c",
      1,
    ],
    "value": 2,
  },
]
`;

exports[`arrays - delete 1`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
      1,
      "c",
    ],
  },
]
`;

exports[`arrays - delete 2`] = `
[
  {
    "op": "add",
    "path": [
      "x",
      1,
      "c",
    ],
    "value": 3,
  },
]
`;

exports[`arrays - modify and shrink 1`] = `
[
  {
    "op": "replace",
    "path": [
      "x",
      0,
    ],
    "value": 4,
  },
  {
    "op": "remove",
    "path": [
      "x",
      2,
    ],
  },
]
`;

exports[`arrays - modify and shrink 2`] = `
[
  {
    "op": "replace",
    "path": [
      "x",
      0,
    ],
    "value": 1,
  },
  {
    "op": "add",
    "path": [
      "x",
      2,
    ],
    "value": 3,
  },
]
`;

exports[`arrays - multiple prepend 1`] = `
[
  {
    "op": "add",
    "path": [
      "x",
      0,
    ],
    "value": 5,
  },
  {
    "op": "add",
    "path": [
      "x",
      1,
    ],
    "value": 4,
  },
]
`;

exports[`arrays - multiple prepend 2`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
      0,
    ],
  },
  {
    "op": "remove",
    "path": [
      "x",
      0,
    ],
  },
]
`;

exports[`arrays - multiple splice 1`] = `
[
  {
    "op": "remove",
    "path": [
      1,
    ],
  },
  {
    "op": "remove",
    "path": [
      1,
    ],
  },
  {
    "op": "replace",
    "path": [
      2,
    ],
    "value": 3,
  },
  {
    "op": "replace",
    "path": [
      3,
    ],
    "value": 3,
  },
]
`;

exports[`arrays - multiple splice 2`] = `
[
  {
    "op": "add",
    "path": [
      1,
    ],
    "value": 1,
  },
  {
    "op": "add",
    "path": [
      2,
    ],
    "value": 2,
  },
  {
    "op": "replace",
    "path": [
      4,
    ],
    "value": 4,
  },
  {
    "op": "replace",
    "path": [
      5,
    ],
    "value": 5,
  },
]
`;

exports[`arrays - pop twice 1`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
      1,
    ],
  },
  {
    "op": "remove",
    "path": [
      "x",
      1,
    ],
  },
]
`;

exports[`arrays - pop twice 2`] = `
[
  {
    "op": "add",
    "path": [
      "x",
      1,
    ],
    "value": 2,
  },
  {
    "op": "add",
    "path": [
      "x",
      2,
    ],
    "value": 3,
  },
]
`;

exports[`arrays - prepend 1`] = `
[
  {
    "op": "add",
    "path": [
      "x",
      0,
    ],
    "value": 4,
  },
]
`;

exports[`arrays - prepend 2`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
      0,
    ],
  },
]
`;

exports[`arrays - prepend then splice middle 1`] = `
[
  {
    "op": "add",
    "path": [
      "x",
      0,
    ],
    "value": 4,
  },
  {
    "op": "remove",
    "path": [
      "x",
      2,
    ],
  },
]
`;

exports[`arrays - prepend then splice middle 2`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
      0,
    ],
  },
  {
    "op": "add",
    "path": [
      "x",
      1,
    ],
    "value": 2,
  },
]
`;

exports[`arrays - push multiple 1`] = `
[
  {
    "op": "add",
    "path": [
      "x",
      3,
    ],
    "value": 4,
  },
  {
    "op": "add",
    "path": [
      "x",
      4,
    ],
    "value": 5,
  },
]
`;

exports[`arrays - push multiple 2`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
      3,
    ],
  },
  {
    "op": "remove",
    "path": [
      "x",
      3,
    ],
  },
]
`;

exports[`arrays - splice (expand) 1`] = `
[
  {
    "op": "add",
    "path": [
      "x",
      1,
    ],
    "value": 4,
  },
  {
    "op": "add",
    "path": [
      "x",
      2,
    ],
    "value": 5,
  },
  {
    "op": "replace",
    "path": [
      "x",
      3,
    ],
    "value": 6,
  },
]
`;

exports[`arrays - splice (expand) 2`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
      1,
    ],
  },
  {
    "op": "remove",
    "path": [
      "x",
      1,
    ],
  },
  {
    "op": "replace",
    "path": [
      "x",
      1,
    ],
    "value": 2,
  },
]
`;

exports[`arrays - splice (shrink) 1`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
      1,
    ],
  },
  {
    "op": "remove",
    "path": [
      "x",
      1,
    ],
  },
  {
    "op": "replace",
    "path": [
      "x",
      1,
    ],
    "value": 6,
  },
]
`;

exports[`arrays - splice (shrink) 2`] = `
[
  {
    "op": "add",
    "path": [
      "x",
      1,
    ],
    "value": 2,
  },
  {
    "op": "add",
    "path": [
      "x",
      2,
    ],
    "value": 3,
  },
  {
    "op": "replace",
    "path": [
      "x",
      3,
    ],
    "value": 4,
  },
]
`;

exports[`arrays - splice middle 1`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
      1,
    ],
  },
]
`;

exports[`arrays - splice middle 2`] = `
[
  {
    "op": "add",
    "path": [
      "x",
      1,
    ],
    "value": 2,
  },
]
`;

exports[`arrays - splice middle then prepend 1`] = `
[
  {
    "op": "add",
    "path": [
      "x",
      0,
    ],
    "value": 4,
  },
  {
    "op": "remove",
    "path": [
      "x",
      2,
    ],
  },
]
`;

exports[`arrays - splice middle then prepend 2`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
      0,
    ],
  },
  {
    "op": "add",
    "path": [
      "x",
      1,
    ],
    "value": 2,
  },
]
`;

exports[`arrays - splice should should result in remove op. 1`] = `
[
  {
    "op": "remove",
    "path": [
      1,
    ],
  },
]
`;

exports[`arrays - splice should should result in remove op. 2`] = `
[
  {
    "op": "add",
    "path": [
      1,
    ],
    "value": 2,
  },
]
`;

exports[`arrays - truncate 1`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
      1,
    ],
  },
  {
    "op": "remove",
    "path": [
      "x",
      1,
    ],
  },
]
`;

exports[`arrays - truncate 2`] = `
[
  {
    "op": "add",
    "path": [
      "x",
      1,
    ],
    "value": 2,
  },
  {
    "op": "add",
    "path": [
      "x",
      2,
    ],
    "value": 3,
  },
]
`;

exports[`change then delete property 1`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
    ],
  },
]
`;

exports[`change then delete property 2`] = `
[
  {
    "op": "add",
    "path": [
      "x",
    ],
    "value": 1,
  },
]
`;

exports[`deeply nested map (with changes) 1`] = `
[
  {
    "op": "add",
    "path": [
      "a",
      "x",
    ],
    "value": Map {
      "c" => 2,
      "y" => 2,
    },
  },
  {
    "op": "remove",
    "path": [
      "a",
      "b",
    ],
  },
]
`;

exports[`deeply nested map (with changes) 2`] = `
[
  {
    "op": "remove",
    "path": [
      "a",
      "x",
    ],
  },
  {
    "op": "add",
    "path": [
      "a",
      "b",
    ],
    "value": Map {
      "c" => 1,
      "d" => 1,
    },
  },
]
`;

exports[`deeply nested object (with changes) 1`] = `
[
  {
    "op": "add",
    "path": [
      "a",
      "x",
    ],
    "value": {
      "c": 2,
      "y": 2,
    },
  },
  {
    "op": "remove",
    "path": [
      "a",
      "b",
    ],
  },
]
`;

exports[`deeply nested object (with changes) 2`] = `
[
  {
    "op": "remove",
    "path": [
      "a",
      "x",
    ],
  },
  {
    "op": "add",
    "path": [
      "a",
      "b",
    ],
    "value": {
      "c": 1,
      "d": 1,
    },
  },
]
`;

exports[`delete 1 1`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
    ],
  },
]
`;

exports[`delete 1 2`] = `
[
  {
    "op": "add",
    "path": [
      "x",
    ],
    "value": {
      "y": 4,
    },
  },
]
`;

exports[`delete 2 1`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
    ],
  },
]
`;

exports[`delete 2 2`] = `
[
  {
    "op": "add",
    "path": [
      "x",
    ],
    "value": 1,
  },
]
`;

exports[`delete 3 1`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
      "y",
    ],
  },
]
`;

exports[`delete 3 2`] = `
[
  {
    "op": "add",
    "path": [
      "x",
      "y",
    ],
    "value": 1,
  },
]
`;

exports[`delete 5 1`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
      {
        "prop": "val1",
      },
    ],
  },
  {
    "op": "remove",
    "path": [
      "x",
      {
        "prop": "val2",
      },
    ],
  },
]
`;

exports[`delete 5 2`] = `
[
  {
    "op": "add",
    "path": [
      "x",
      {
        "prop": "val1",
      },
    ],
    "value": 1,
  },
  {
    "op": "add",
    "path": [
      "x",
      {
        "prop": "val2",
      },
    ],
    "value": 2,
  },
]
`;

exports[`delete 6 1`] = `
[
  {
    "op": "remove",
    "path": [
      0,
    ],
    "value": "x",
  },
]
`;

exports[`delete 6 2`] = `
[
  {
    "op": "add",
    "path": [
      0,
    ],
    "value": "x",
  },
]
`;

exports[`delete 7 1`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
      0,
    ],
    "value": "y",
  },
]
`;

exports[`delete 7 2`] = `
[
  {
    "op": "add",
    "path": [
      "x",
      0,
    ],
    "value": "y",
  },
]
`;

exports[`enablePatches and assign with ref array 1`] = `
[
  {
    "op": "replace",
    "path": [
      "arr1",
      0,
      "a",
    ],
    "value": 444,
  },
  {
    "op": "add",
    "path": [
      "arr0",
      1,
    ],
    "value": {
      "a": 333,
      "c": 333,
    },
  },
  {
    "op": "add",
    "path": [
      "arr0",
      2,
    ],
    "value": [
      {
        "a": 444,
      },
    ],
  },
  {
    "op": "remove",
    "path": [
      "a",
      "b",
    ],
  },
]
`;

exports[`enablePatches and assign with ref array 2`] = `
[
  {
    "op": "replace",
    "path": [
      "arr1",
      0,
      "a",
    ],
    "value": 1,
  },
  {
    "op": "remove",
    "path": [
      "arr0",
      1,
    ],
  },
  {
    "op": "remove",
    "path": [
      "arr0",
      1,
    ],
  },
  {
    "op": "add",
    "path": [
      "a",
      "b",
    ],
    "value": {
      "c": 1,
    },
  },
]
`;

exports[`enablePatches and assign with ref object 1`] = `
[
  {
    "op": "add",
    "path": [
      "a",
      "arr",
      0,
    ],
    "value": 1,
  },
  {
    "op": "add",
    "path": [
      "a",
      "arr",
      1,
    ],
    "value": 2,
  },
  {
    "op": "replace",
    "path": [
      "a",
      "b",
      "c",
    ],
    "value": 333,
  },
  {
    "op": "add",
    "path": [
      "x",
    ],
    "value": {
      "c": 333,
    },
  },
  {
    "op": "add",
    "path": [
      "x1",
    ],
    "value": {
      "c": 333,
    },
  },
]
`;

exports[`enablePatches and assign with ref object 2`] = `
[
  {
    "op": "remove",
    "path": [
      "a",
      "arr",
      0,
    ],
  },
  {
    "op": "remove",
    "path": [
      "a",
      "arr",
      0,
    ],
  },
  {
    "op": "replace",
    "path": [
      "a",
      "b",
      "c",
    ],
    "value": 1,
  },
  {
    "op": "remove",
    "path": [
      "x",
    ],
  },
  {
    "op": "remove",
    "path": [
      "x1",
    ],
  },
]
`;

exports[`enablePatches and assign/delete with ref object 1`] = `
[
  {
    "op": "add",
    "path": [
      "a",
      "arr",
      0,
    ],
    "value": 1,
  },
  {
    "op": "add",
    "path": [
      "a",
      "arr",
      1,
    ],
    "value": 2,
  },
  {
    "op": "add",
    "path": [
      "x",
    ],
    "value": {
      "c": 444,
    },
  },
  {
    "op": "add",
    "path": [
      "x1",
    ],
    "value": {
      "c": 444,
    },
  },
  {
    "op": "replace",
    "path": [
      "a",
      "b",
    ],
    "value": {
      "f": 1,
    },
  },
]
`;

exports[`enablePatches and assign/delete with ref object 2`] = `
[
  {
    "op": "remove",
    "path": [
      "a",
      "arr",
      0,
    ],
  },
  {
    "op": "remove",
    "path": [
      "a",
      "arr",
      0,
    ],
  },
  {
    "op": "remove",
    "path": [
      "x",
    ],
  },
  {
    "op": "remove",
    "path": [
      "x1",
    ],
  },
  {
    "op": "replace",
    "path": [
      "a",
      "b",
    ],
    "value": {
      "c": 1,
    },
  },
]
`;

exports[`map 1`] = `
[
  {
    "op": "replace",
    "path": [
      "map3",
      "a",
    ],
    "value": {
      "bar": "new str",
    },
  },
  {
    "op": "remove",
    "path": [
      "map2",
      "c",
    ],
  },
  {
    "op": "remove",
    "path": [
      "map1",
      "a",
    ],
  },
  {
    "op": "remove",
    "path": [
      "map1",
      "c",
    ],
  },
  {
    "op": "replace",
    "path": [
      "map",
      "a",
      "bar",
    ],
    "value": "new str",
  },
  {
    "op": "add",
    "path": [
      "map",
      "b",
    ],
    "value": {
      "bar": "str",
    },
  },
]
`;

exports[`map 2`] = `
[
  {
    "op": "replace",
    "path": [
      "map3",
      "a",
    ],
    "value": {
      "bar": "str",
    },
  },
  {
    "op": "add",
    "path": [
      "map2",
      "c",
    ],
    "value": {
      "bar": "str",
    },
  },
  {
    "op": "add",
    "path": [
      "map1",
      "a",
    ],
    "value": {
      "bar": "str",
    },
  },
  {
    "op": "add",
    "path": [
      "map1",
      "c",
    ],
    "value": {
      "bar": "str",
    },
  },
  {
    "op": "replace",
    "path": [
      "map",
      "a",
      "bar",
    ],
    "value": "str",
  },
  {
    "op": "remove",
    "path": [
      "map",
      "b",
    ],
  },
]
`;

exports[`map with ref 1`] = `
[
  {
    "op": "add",
    "path": [
      "f",
    ],
    "value": {
      "baz": "new str0",
    },
  },
  {
    "op": "remove",
    "path": [
      "foobar",
      "a",
    ],
  },
]
`;

exports[`map with ref 2`] = `
[
  {
    "op": "remove",
    "path": [
      "f",
    ],
  },
  {
    "op": "add",
    "path": [
      "foobar",
      "a",
    ],
    "value": {
      "baz": "str0",
    },
  },
]
`;

exports[`minimum amount of changes 1`] = `
[
  {
    "op": "replace",
    "path": [
      "x",
    ],
    "value": 4,
  },
  {
    "op": "replace",
    "path": [
      "y",
    ],
    "value": {
      "a": 2,
    },
  },
]
`;

exports[`minimum amount of changes 2`] = `
[
  {
    "op": "replace",
    "path": [
      "x",
    ],
    "value": 3,
  },
  {
    "op": "replace",
    "path": [
      "y",
    ],
    "value": {
      "a": 4,
    },
  },
]
`;

exports[`nested change in array 1`] = `
[
  {
    "op": "replace",
    "path": [
      0,
      0,
      "b",
    ],
    "value": 2,
  },
]
`;

exports[`nested change in array 2`] = `
[
  {
    "op": "replace",
    "path": [
      0,
      0,
      "b",
    ],
    "value": 1,
  },
]
`;

exports[`nested change in map 1`] = `
[
  {
    "op": "replace",
    "path": [
      "a",
      "b",
    ],
    "value": 2,
  },
]
`;

exports[`nested change in map 2`] = `
[
  {
    "op": "replace",
    "path": [
      "a",
      "b",
    ],
    "value": 1,
  },
]
`;

exports[`nested change in object 1`] = `
[
  {
    "op": "replace",
    "path": [
      "a",
      "b",
    ],
    "value": 2,
  },
]
`;

exports[`nested change in object 2`] = `
[
  {
    "op": "replace",
    "path": [
      "a",
      "b",
    ],
    "value": 1,
  },
]
`;

exports[`nested map (no changes) 1`] = `
[
  {
    "op": "add",
    "path": [
      "x",
    ],
    "value": Map {
      "b" => 1,
    },
  },
  {
    "op": "remove",
    "path": [
      "a",
    ],
  },
]
`;

exports[`nested map (no changes) 2`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
    ],
  },
  {
    "op": "add",
    "path": [
      "a",
    ],
    "value": Map {
      "b" => 1,
    },
  },
]
`;

exports[`nested map (with changes) 1`] = `
[
  {
    "op": "add",
    "path": [
      "x",
    ],
    "value": Map {
      "b" => 2,
      "y" => 2,
    },
  },
  {
    "op": "remove",
    "path": [
      "a",
    ],
  },
]
`;

exports[`nested map (with changes) 2`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
    ],
  },
  {
    "op": "add",
    "path": [
      "a",
    ],
    "value": Map {
      "b" => 1,
      "c" => 1,
    },
  },
]
`;

exports[`nested object (no changes) 1`] = `
[
  {
    "op": "add",
    "path": [
      "x",
    ],
    "value": {
      "b": 1,
    },
  },
  {
    "op": "remove",
    "path": [
      "a",
    ],
  },
]
`;

exports[`nested object (no changes) 2`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
    ],
  },
  {
    "op": "add",
    "path": [
      "a",
    ],
    "value": {
      "b": 1,
    },
  },
]
`;

exports[`nested object (with changes) 1`] = `
[
  {
    "op": "add",
    "path": [
      "x",
    ],
    "value": {
      "b": 2,
      "y": 2,
    },
  },
  {
    "op": "remove",
    "path": [
      "a",
    ],
  },
]
`;

exports[`nested object (with changes) 2`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
    ],
  },
  {
    "op": "add",
    "path": [
      "a",
    ],
    "value": {
      "b": 1,
      "c": 1,
    },
  },
]
`;

exports[`object - assign ref 1`] = `
[
  {
    "op": "replace",
    "path": [
      "foobar",
    ],
    "value": {
      "baz": "str",
    },
  },
  {
    "op": "add",
    "path": [
      "foo",
      "bar1",
    ],
    "value": {
      "baz": "str",
    },
  },
]
`;

exports[`object - assign ref 2`] = `
[
  {
    "op": "replace",
    "path": [
      "foobar",
    ],
    "value": {
      "baz": "str",
    },
  },
  {
    "op": "remove",
    "path": [
      "foo",
      "bar1",
    ],
  },
]
`;

exports[`object 1`] = `
[
  {
    "op": "replace",
    "path": [
      "foo",
      "bar",
    ],
    "value": "new str",
  },
]
`;

exports[`object 2`] = `
[
  {
    "op": "replace",
    "path": [
      "foo",
      "bar",
    ],
    "value": "str",
  },
]
`;

exports[`object assign ref 1`] = `
[
  {
    "op": "replace",
    "path": [
      "foo",
      "bar",
    ],
    "value": "new str",
  },
  {
    "op": "add",
    "path": [
      "foobar",
      "foo",
    ],
    "value": {
      "bar": "new str",
    },
  },
]
`;

exports[`object assign ref 2`] = `
[
  {
    "op": "replace",
    "path": [
      "foo",
      "bar",
    ],
    "value": "str",
  },
  {
    "op": "remove",
    "path": [
      "foobar",
      "foo",
    ],
  },
]
`;

exports[`object delete key 1`] = `
[
  {
    "op": "remove",
    "path": [
      "foo",
      "bar",
    ],
  },
]
`;

exports[`object delete key 2`] = `
[
  {
    "op": "add",
    "path": [
      "foo",
      "bar",
    ],
    "value": "str",
  },
]
`;

exports[`object setter with ref 1`] = `
[
  {
    "op": "replace",
    "path": [
      "foobar",
      "f",
    ],
    "value": {
      "baz": "str",
    },
  },
  {
    "op": "add",
    "path": [
      "f",
    ],
    "value": {
      "baz": "new str0",
    },
  },
]
`;

exports[`object setter with ref 2`] = `
[
  {
    "op": "replace",
    "path": [
      "foobar",
      "f",
    ],
    "value": {
      "baz": "str",
    },
  },
  {
    "op": "remove",
    "path": [
      "f",
    ],
  },
]
`;

exports[`object with class 1`] = `
[
  {
    "op": "replace",
    "path": [
      "foobar",
      "baz",
    ],
    "value": "new str",
  },
]
`;

exports[`object with class 2`] = `
[
  {
    "op": "replace",
    "path": [
      "foobar",
      "baz",
    ],
    "value": "str",
  },
]
`;

exports[`object with delete 1`] = `
[
  {
    "op": "remove",
    "path": [
      "foobar",
    ],
  },
  {
    "op": "add",
    "path": [
      "foobar1",
    ],
    "value": {
      "baz": "new str2",
    },
  },
]
`;

exports[`object with delete 2`] = `
[
  {
    "op": "add",
    "path": [
      "foobar",
    ],
    "value": {
      "baz": "str",
    },
  },
  {
    "op": "remove",
    "path": [
      "foobar1",
    ],
  },
]
`;

exports[`object with ref 1`] = `
[
  {
    "op": "replace",
    "path": [
      "f",
      "baz",
    ],
    "value": "new str3",
  },
  {
    "op": "remove",
    "path": [
      "foobar",
    ],
  },
  {
    "op": "add",
    "path": [
      "foobar1",
    ],
    "value": {
      "baz": "new str2",
    },
  },
]
`;

exports[`object with ref 2`] = `
[
  {
    "op": "replace",
    "path": [
      "f",
      "baz",
    ],
    "value": "str",
  },
  {
    "op": "add",
    "path": [
      "foobar",
    ],
    "value": {
      "baz": "str",
    },
  },
  {
    "op": "remove",
    "path": [
      "foobar1",
    ],
  },
]
`;

exports[`patches issue 1`] = `
[
  {
    "op": "remove",
    "path": [
      "foo",
      "bar",
    ],
  },
  {
    "op": "add",
    "path": [
      "e",
    ],
    "value": {
      "ffff": {
        "a": 2,
      },
    },
  },
]
`;

exports[`patches issue 2`] = `
[
  {
    "op": "add",
    "path": [
      "foo",
      "bar",
    ],
    "value": {
      "a": 1,
    },
  },
  {
    "op": "remove",
    "path": [
      "e",
    ],
  },
]
`;

exports[`patches mutate 1`] = `
[
  {
    "op": "replace",
    "path": [
      "items",
    ],
    "value": [],
  },
]
`;

exports[`patches mutate 2`] = `
[
  {
    "op": "replace",
    "path": [
      "items",
    ],
    "value": [],
  },
]
`;

exports[`same value replacement - 1 1`] = `[]`;

exports[`same value replacement - 1 2`] = `[]`;

exports[`same value replacement - 2 1`] = `[]`;

exports[`same value replacement - 2 2`] = `[]`;

exports[`same value replacement - 3 1`] = `[]`;

exports[`same value replacement - 3 2`] = `[]`;

exports[`same value replacement - 4 1`] = `[]`;

exports[`same value replacement - 4 2`] = `[]`;

exports[`same value replacement - 4 3`] = `[]`;

exports[`same value replacement - 4 4`] = `[]`;

exports[`same value replacement - 5 1`] = `[]`;

exports[`same value replacement - 5 2`] = `[]`;

exports[`same value replacement - 6 1`] = `[]`;

exports[`same value replacement - 6 2`] = `[]`;

exports[`same value replacement(array) - 2 1`] = `[]`;

exports[`same value replacement(array) - 2 2`] = `[]`;

exports[`same value replacement(array) - 2 3`] = `[]`;

exports[`same value replacement(array) - 2 4`] = `[]`;

exports[`same value replacement(map) - 2 1`] = `[]`;

exports[`same value replacement(map) - 2 2`] = `[]`;

exports[`same value replacement(set) - 2 1`] = `[]`;

exports[`same value replacement(set) - 2 2`] = `[]`;

exports[`set 1`] = `
[
  {
    "op": "add",
    "path": [
      "set3",
      2,
    ],
    "value": {
      "bar": "new str1",
    },
  },
  {
    "op": "remove",
    "path": [
      "set1",
      0,
    ],
    "value": {
      "bar": "str",
    },
  },
  {
    "op": "remove",
    "path": [
      "set1",
      1,
    ],
    "value": {
      "bar": "str",
    },
  },
  {
    "op": "remove",
    "path": [
      "set",
      0,
    ],
    "value": {
      "bar": "str1111",
    },
  },
  {
    "op": "add",
    "path": [
      "set",
      1,
    ],
    "value": {
      "bar": "str",
    },
  },
]
`;

exports[`set 2`] = `
[
  {
    "op": "remove",
    "path": [
      "set",
      1,
    ],
    "value": {
      "bar": "str",
    },
  },
  {
    "op": "add",
    "path": [
      "set",
      0,
    ],
    "value": {
      "bar": "str1111",
    },
  },
  {
    "op": "add",
    "path": [
      "set1",
      1,
    ],
    "value": {
      "bar": "str",
    },
  },
  {
    "op": "add",
    "path": [
      "set1",
      0,
    ],
    "value": {
      "bar": "str",
    },
  },
  {
    "op": "remove",
    "path": [
      "set3",
      2,
    ],
    "value": {
      "bar": "new str1",
    },
  },
]
`;

exports[`set value and pop the value (array) - 2 1`] = `
[
  {
    "op": "add",
    "path": [
      0,
    ],
    "value": {},
  },
  {
    "op": "remove",
    "path": [
      3,
    ],
  },
]
`;

exports[`set value and pop the value (array) - 2 2`] = `
[
  {
    "op": "remove",
    "path": [
      0,
    ],
  },
  {
    "op": "add",
    "path": [
      2,
    ],
    "value": {},
  },
]
`;

exports[`set with ref 1`] = `
[
  {
    "op": "add",
    "path": [
      "f",
    ],
    "value": {
      "baz": "new str0",
    },
  },
  {
    "op": "remove",
    "path": [
      "foobar",
      0,
    ],
    "value": {
      "baz": "str0",
    },
  },
]
`;

exports[`set with ref 2`] = `
[
  {
    "op": "add",
    "path": [
      "foobar",
      0,
    ],
    "value": {
      "baz": "str0",
    },
  },
  {
    "op": "remove",
    "path": [
      "f",
    ],
  },
]
`;

exports[`sets - add - 1 1`] = `
[
  {
    "op": "add",
    "path": [
      1,
    ],
    "value": 2,
  },
]
`;

exports[`sets - add - 1 2`] = `
[
  {
    "op": "remove",
    "path": [
      1,
    ],
    "value": 2,
  },
]
`;

exports[`sets - add, delete, add - 1 1`] = `
[
  {
    "op": "add",
    "path": [
      1,
    ],
    "value": 2,
  },
]
`;

exports[`sets - add, delete, add - 1 2`] = `
[
  {
    "op": "remove",
    "path": [
      1,
    ],
    "value": 2,
  },
]
`;

exports[`sets - add, delete, add - 2 1`] = `[]`;

exports[`sets - add, delete, add - 2 2`] = `[]`;

exports[`sets - mutate - 1 1`] = `
[
  {
    "op": "replace",
    "path": [
      1,
      "val",
    ],
    "value": "you",
  },
  {
    "op": "replace",
    "path": [
      0,
      "val",
    ],
    "value": "rock",
  },
]
`;

exports[`sets - mutate - 1 2`] = `
[
  {
    "op": "replace",
    "path": [
      1,
      "val",
    ],
    "value": "will",
  },
  {
    "op": "replace",
    "path": [
      0,
      "val",
    ],
    "value": "We",
  },
]
`;

exports[`simple array 1`] = `
[
  {
    "op": "replace",
    "path": [
      "arr1",
      0,
      "a",
    ],
    "value": 2,
  },
]
`;

exports[`simple array 2`] = `
[
  {
    "op": "replace",
    "path": [
      "arr1",
      0,
      "a",
    ],
    "value": 1,
  },
]
`;

exports[`simple assignment - 1 1`] = `
[
  {
    "op": "replace",
    "path": [
      "x",
    ],
    "value": 4,
  },
]
`;

exports[`simple assignment - 1 2`] = `
[
  {
    "op": "replace",
    "path": [
      "x",
    ],
    "value": 3,
  },
]
`;

exports[`simple assignment - 2 1`] = `
[
  {
    "op": "replace",
    "path": [
      "x",
      "y",
    ],
    "value": 5,
  },
]
`;

exports[`simple assignment - 2 2`] = `
[
  {
    "op": "replace",
    "path": [
      "x",
      "y",
    ],
    "value": 4,
  },
]
`;

exports[`simple assignment - 3 1`] = `
[
  {
    "op": "replace",
    "path": [
      "x",
      0,
      "y",
    ],
    "value": 5,
  },
]
`;

exports[`simple assignment - 3 2`] = `
[
  {
    "op": "replace",
    "path": [
      "x",
      0,
      "y",
    ],
    "value": 4,
  },
]
`;

exports[`simple assignment - 4 1`] = `
[
  {
    "op": "replace",
    "path": [
      "x",
      "y",
    ],
    "value": 5,
  },
]
`;

exports[`simple assignment - 4 2`] = `
[
  {
    "op": "replace",
    "path": [
      "x",
      "y",
    ],
    "value": 4,
  },
]
`;

exports[`simple assignment - 5 1`] = `
[
  {
    "op": "replace",
    "path": [
      "x",
      "y",
    ],
    "value": 5,
  },
]
`;

exports[`simple assignment - 5 2`] = `
[
  {
    "op": "replace",
    "path": [
      "x",
      "y",
    ],
    "value": 4,
  },
]
`;

exports[`simple assignment - 6 1`] = `
[
  {
    "op": "replace",
    "path": [
      "x",
    ],
    "value": 2,
  },
  {
    "op": "add",
    "path": [
      "y",
    ],
    "value": 3,
  },
]
`;

exports[`simple assignment - 6 2`] = `
[
  {
    "op": "replace",
    "path": [
      "x",
    ],
    "value": 1,
  },
  {
    "op": "remove",
    "path": [
      "y",
    ],
  },
]
`;

exports[`simple assignment - 7 1`] = `
[
  {
    "op": "replace",
    "path": [
      "x",
      {
        "prop": "val1",
      },
    ],
    "value": 5,
  },
  {
    "op": "add",
    "path": [
      "x",
      {
        "prop": "val2",
      },
    ],
    "value": 6,
  },
]
`;

exports[`simple assignment - 7 2`] = `
[
  {
    "op": "replace",
    "path": [
      "x",
      {
        "prop": "val1",
      },
    ],
    "value": 4,
  },
  {
    "op": "remove",
    "path": [
      "x",
      {
        "prop": "val2",
      },
    ],
  },
]
`;

exports[`simple delete 1`] = `
[
  {
    "op": "remove",
    "path": [
      "x",
    ],
  },
]
`;

exports[`simple delete 2`] = `
[
  {
    "op": "add",
    "path": [
      "x",
    ],
    "value": 2,
  },
]
`;

exports[`simple map 1`] = `
[
  {
    "op": "replace",
    "path": [
      "map",
      "a",
      "bar",
    ],
    "value": "new str",
  },
  {
    "op": "add",
    "path": [
      "map",
      "b",
    ],
    "value": {
      "bar": "str",
    },
  },
]
`;

exports[`simple map 2`] = `
[
  {
    "op": "replace",
    "path": [
      "map",
      "a",
      "bar",
    ],
    "value": "str",
  },
  {
    "op": "remove",
    "path": [
      "map",
      "b",
    ],
  },
]
`;

exports[`simple set 1`] = `
[
  {
    "op": "replace",
    "path": [
      "set",
      1,
      "bar",
    ],
    "value": "new str1",
  },
  {
    "op": "replace",
    "path": [
      "set",
      0,
      "bar",
    ],
    "value": "new str0",
  },
  {
    "op": "remove",
    "path": [
      "set",
      0,
    ],
    "value": {
      "bar": "str",
    },
  },
  {
    "op": "remove",
    "path": [
      "set",
      1,
    ],
    "value": {
      "bar": "str",
    },
  },
  {
    "op": "add",
    "path": [
      "set",
      0,
    ],
    "value": {
      "bar": "new str0",
    },
  },
  {
    "op": "add",
    "path": [
      "set",
      1,
    ],
    "value": {
      "bar": "new str1",
    },
  },
  {
    "op": "add",
    "path": [
      "set",
      2,
    ],
    "value": {
      "bar": "str1",
    },
  },
]
`;

exports[`simple set 2`] = `
[
  {
    "op": "remove",
    "path": [
      "set",
      2,
    ],
    "value": {
      "bar": "str1",
    },
  },
  {
    "op": "remove",
    "path": [
      "set",
      1,
    ],
    "value": {
      "bar": "new str1",
    },
  },
  {
    "op": "remove",
    "path": [
      "set",
      0,
    ],
    "value": {
      "bar": "new str0",
    },
  },
  {
    "op": "add",
    "path": [
      "set",
      1,
    ],
    "value": {
      "bar": "str",
    },
  },
  {
    "op": "add",
    "path": [
      "set",
      0,
    ],
    "value": {
      "bar": "str",
    },
  },
  {
    "op": "replace",
    "path": [
      "set",
      1,
      "bar",
    ],
    "value": "str",
  },
  {
    "op": "replace",
    "path": [
      "set",
      0,
      "bar",
    ],
    "value": "str",
  },
]
`;
